Bug 112480 - ODF: wrong attribute 'enhanced-path' is saved
Summary: ODF: wrong attribute 'enhanced-path' is saved
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
5.4.1.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords: filter:odf
Depends on:
Blocks: ODF-export-invalid
  Show dependency treegraph
 
Reported: 2017-09-18 20:21 UTC by Jos van den Oever
Modified: 2019-03-21 13:16 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
file with enhanced-path (9.59 KB, application/vnd.oasis.opendocument.graphics)
2017-09-18 20:21 UTC, Jos van den Oever
Details
odp with the same problem (13.62 KB, application/vnd.oasis.opendocument.presentation)
2017-09-18 20:22 UTC, Jos van den Oever
Details
pptx file to reprduce (36.43 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2017-09-19 06:48 UTC, Regina Henschel
Details
Crash information by Visual Studio 2017 (7.61 KB, text/plain)
2018-12-27 00:33 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jos van den Oever 2017-09-18 20:21:58 UTC
Created attachment 136349 [details]
file with enhanced-path

I've a file (imported from PPTX) that has an enhanced-geometry element with an invalid attribute. draw:enhanced-path is present (good) and enhanced-path (wrong).

This is the wrong XML snippet:

<draw:enhanced-geometry draw:mirror-horizontal="false" draw:mirror-vertical="false" svg:viewBox="0 0 0 0" draw:text-areas="?f10 ?f13 ?f11 ?f14" draw:type="ooxml-donut" draw:modifiers="25000" draw:enhanced-path="M 0 ?f12 Z M ?f3 ?f5 Z N" enhanced-path="M 0 ?f12 G ?f3 ?f5 ?f17 ?f18 ?f3 ?f5 ?f19 ?f20 ?f3 ?f5 ?f21 ?f22 ?f3 ?f5 ?f23 ?f24 Z M ?f2 ?f12 G ?f4 ?f6 ?f25 ?f26 ?f4 ?f6 ?f27 ?f28 ?f4 ?f6 ?f29 ?f30 ?f4 ?f6 ?f31 ?f32 Z N">

It is preserved when loading and saving again. It shows up in odp and odg at least (see attachments).

In this example I wonder, why not use draw:type="ring" instead of draw:type="ooxml-donut", they look similar enough.
Comment 1 Jos van den Oever 2017-09-18 20:22:54 UTC
Created attachment 136350 [details]
odp with the same problem
Comment 2 Regina Henschel 2017-09-18 22:24:19 UTC
Can you please attach the pptx-file too?
Comment 3 Regina Henschel 2017-09-18 22:37:19 UTC
Do you have saved in "ODF 1.2" or in "ODF 1.2 extended"?

It guess, that it is in drawooo namespace in "ODF 1.2 extended" and switching to "ODF 1.2" removes only the custom namespace, but should not write the attribute at all. [I have noticed some similar bugs in other areas already.]
Comment 4 Regina Henschel 2017-09-19 06:48:47 UTC
Created attachment 136361 [details]
pptx file to reprduce

Reproducible with the attached file. Open it and save it as strict "ODF 1.2".
Comment 5 Jos van den Oever 2017-09-19 07:08:34 UTC
Yes, I was saving as ODF 1.2 without extensions.

I see you created a pptx file. That's nice because I could not share the one I had, just copy the offending shape in a new file.
Comment 6 QA Administrators 2018-09-20 02:51:24 UTC Comment hidden (obsolete)
Comment 7 Regina Henschel 2018-11-24 17:08:20 UTC
The error still exists in Version: 6.3.0.0.alpha0+ (x64)
Build ID: d71ea82055a6a304493c7eaa90809a348e23784d
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-11-19_04:56:18
Locale: de-DE (en_US); UI-Language: en-US
Calc: threaded
Comment 8 Regina Henschel 2018-12-27 00:33:42 UTC
Created attachment 147850 [details]
Crash information by Visual Studio 2017

A debug build crashes. The attachment has the information from Visual Studio.
Comment 9 Commit Notification 2018-12-28 21:20:36 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/928f84e9c041fe1febf1cdffe64cd73471071641%5E%21

tdf#112480 drawooo:enhanced-path only with ODF ver > 1.2

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2019-02-05 17:05:08 UTC
A polite ping to Regina Henschel:
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Otherwise, Could you please explain what's missing?
Thanks
Comment 11 Xisco Faulí 2019-03-21 11:51:26 UTC
(In reply to Xisco Faulí from comment #10)
> A polite ping to Regina Henschel:
> Is this bug fixed? if so, could you please close it as RESOLVED FIXED ?
> Otherwise, Could you please explain what's missing?
> Thanks

ping ?
Comment 12 Regina Henschel 2019-03-21 13:16:09 UTC
Sorry, I missed that.

Yes, I see the fix in Version: 6.3.0.0.alpha0+ (x64)
Build ID: 102822646c5729d4edea83ddd66ccd0115cfd83e
CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-03-20_21:03:27
Locale: de-DE (en_US); UI-Language: en-US
Calc: threaded