tdf#112480 drawooo:enhanced-path only with ODF ver > 1.2

Saving in ODF 1.2 strict using a debug build crashes in
SvXMLNamespaceMap::GetQNameByKey. A pro build does not crash but
returns the local name without a prefix, which produces the
output reported in Bugzilla.

Change-Id: I497cd4a2861f26616cc9ff0b65ca017834097f75